--- a/index.html
+++ b/index.html
@@ -532,8 +532,9 @@
           </div>
         </div>
       </div>
-       <!-- Row 2 for image editing -->
-       <section class="hero is-light is-small">
+  </section>
+  <!-- Row 2 for image editing -->
+  <section class="hero is-light is-small">
         <div class="hero-body">
           <div class="container is-max-desktop has-text-centered">
             <h2 class="title is-4">STSL for Image Editing</h2>
@@ -550,7 +551,7 @@
             <div class="has-text-justified">
               <p>                
                 <strong> 
-                  image editing from corrupted image:
+                  Image editing from corrupted image:
                 </strong>
                 <font color="blue"> 
                 "a high quality photo of a tiger face"
@@ -651,108 +652,7 @@
                 </div>
               </div>
               </div>
-        </div>    
-        <!-- row 2 -->
-        <div class="columns is-centered">
-          <div class="column">
-            <div class="content">
-              <div class="tab_container">
-                <div id="juxtapose-embed1" data-startingposition="30%" data-animate="true" class="juxtapose">
-                  <div class="jx-slider">
-                    <div class="jx-handle " style="left: 54.53%;">
-                      <div class="jx-arrow jx-left"></div>
-                      <div class="jx-control">
-                        <div class="jx-controller" tabindex="0" role="slider" aria-valuenow="50" aria-valuemin="0"
-                          aria-valuemax="100"></div>
-                      </div>
-                      <div class="jx-arrow jx-right"></div>
-                    </div>
-                    <div class="jx-image jx-left " style="width: 54.53%;">
-                      <img src="./image_assets/teaser/panda_plain.png" alt="" data-label="Plain-text">
-                    </div>
-                    <div class="jx-image jx-right " style="width: 45.47%;"><img src="./image_assets/teaser/panda_rich.png"
-                        alt="" data-label="Rich-text">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="has-text-justified">
-              <p>
-                <span style="font-family:roboto;">"A panda<sup>1</sup> standing on a cliff by a waterfall."</span>
-              </p>
-              <p>
-                <span style="font-size:0.6em;"><sup>1</sup>Happy kung fu panda, asian art, ultra detailede.</span>
-              </p>
-            </div>
-          </div>
-          <div class="column">
-            <div class="content">
-              <div class="tab_container">
-                <div id="juxtapose-embed1" data-startingposition="30%" data-animate="true" class="juxtapose">
-                  <div class="jx-slider">
-                    <div class="jx-handle " style="left: 54.53%;">
-                      <div class="jx-arrow jx-left"></div>
-                      <div class="jx-control">
-                        <div class="jx-controller" tabindex="0" role="slider" aria-valuenow="50" aria-valuemin="0"
-                          aria-valuemax="100"></div>
-                      </div>
-                      <div class="jx-arrow jx-right"></div>
-                    </div>
-                    <div class="jx-image jx-left " style="width: 54.53%;">
-                      <img src="./image_assets/teaser/duck_plain.png" alt="" data-label="Plain-text">
-                    </div>
-                    <div class="jx-image jx-right " style="width: 45.47%;"><img
-                        src="./image_assets/teaser/duck_rich.png" alt="" data-label="Rich-text">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="has-text-justified">
-              <p>
-                <span style="font-family:roboto;">"A pixel art of a duck with a gun<sup>1</sup> in hand, wearing a hat<sup>2</sup>, minimalist, flat"</span>
-              </p>
-              <p>
-                <span style="font-size:0.6em;"><sup>1</sup>A bouquet of flowers.</span><br>
-                <span style="font-size:0.6em;"><sup>2</sup>A black hat decorated with a red flower.</span>
-              </p>
-            </div>
-          </div>
-          <div class="column">
-            <div class="content">
-              <div class="tab_container">
-                <div id="juxtapose-embed2" data-startingposition="30%" data-animate="true" class="juxtapose">
-                  <div class="jx-slider">
-                    <div class="jx-handle " style="left: 54.53%;">
-                      <div class="jx-arrow jx-left"></div>
-                      <div class="jx-control">
-                        <div class="jx-controller" tabindex="0" role="slider" aria-valuenow="50" aria-valuemin="0"
-                          aria-valuemax="100"></div>
-                      </div>
-                      <div class="jx-arrow jx-right"></div>
-                    </div>
-                    <div class="jx-image jx-left " style="width: 54.53%;"><img
-                        src="./image_assets/teaser/girl_plain.png" alt="" data-label="Plain-text">
-                    </div>
-                    <div class="jx-image jx-right " style="width: 45.47%;"><img
-                        src="./image_assets/teaser/girl_rich.png" alt="" data-label="Rich-text">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="has-text-justified">
-              <p>
-                <span style="font-family:roboto;">"A girl with <span style="color:rgb(255, 135, 0);">long hair</span> sitting in a cafe, by a table with coffee<sup>1</sup> on it, best quality, ultra detailed, dynamic pose."
-              </p>
-              <p>
-                <span style="font-size:0.6em;"><sup>1</sup>Ceramic coffee cup with intricate design, a dance of earthy browns and delicate gold accents. The dark, velvety latte is in it.
-                </span>
-              </p>
-            </div>
-          </div>
-        </div>
+        </div>        
       </div>
     </div>
     </div>
