--- a/index.html
+++ b/index.html
@@ -543,6 +543,7 @@
               </p>
               <br>
             </div>
+            <!-- Editing tiger2leo row 1 -->
             <!-- Motion Deblur col 1 -->
             <div class="content has-text-justified">
               <h4>
@@ -638,6 +639,122 @@
                         </div>
                         <div class="jx-image jx-right " style="width: 45.47%;"><img
                             src="./image_assets/teaser/Edit/GB/flickr_wild_001112_edit.png" alt="" data-label="Output">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="has-text-centered">
+                  <p>
+                    <strong>Gaussian Blur</strong>
+                  </p>
+                </div>
+              </div>
+              </div>
+              <div class="content has-text-justified">
+                <h4>
+                  Comparison with existing methods:
+                </h4>
+              </div>
+              <div class="content has-text-centered">
+                <img src="./image_assets/font_color.jpg" width="150%">
+              </div>
+              <!-- Editing cat2fox row 2 -->
+            <!-- Motion Deblur col 1 -->
+            <div class="content has-text-justified">
+              <h4>
+                Image editing from corrupted image:
+              </h4>
+            </div>
+            <div class="has-text-centered">          
+              <p>                                
+                <font color="blue"> 
+                "a high quality photo of a cat face"
+                <span>&#8594;</span>
+                "a high quality photo of a <strong>fox</strong> face"
+                </font>
+              </p>
+              <br>
+            </div>
+            <div class="columns is-centered">
+              <div class="column">
+                <div class="content">
+                  <div class="tab_container">
+                    <div id="juxtapose-embed1" data-startingposition="30%" data-animate="true" class="juxtapose">
+                      <div class="jx-slider">
+                        <div class="jx-handle " style="left: 54.53%;">
+                          <div class="jx-arrow jx-left"></div>
+                          <div class="jx-control">
+                            <div class="jx-controller" tabindex="0" role="slider" aria-valuenow="50" aria-valuemin="0"
+                              aria-valuemax="100"></div>
+                          </div>
+                          <div class="jx-arrow jx-right"></div>
+                        </div>
+                        <div class="jx-image jx-left " style="width: 54.53%;">
+                          <img src="./image_assets/teaser/Edit/MB/pixabay_wild_000856_nti_ip.png" alt="" data-label="Input">
+                        </div>
+                        <div class="jx-image jx-right " style="width: 45.47%;"><img
+                            src="./image_assets/teaser/Edit/MB/pixabay_wild_000856_edit.png" alt="" data-label="Output">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="has-text-centered">
+                  <p>
+                    <strong>Motion Blur</strong>
+                  </p>
+                </div>
+              </div>
+              <!-- Super-Resolution col 2 -->
+              <div class="column">
+                <div class="content">
+                  <div class="tab_container">
+                    <div id="juxtapose-embed2" data-startingposition="30%" data-animate="true" class="juxtapose">
+                      <div class="jx-slider">
+                        <div class="jx-handle " style="left: 54.53%;">
+                          <div class="jx-arrow jx-left"></div>
+                          <div class="jx-control">
+                            <div class="jx-controller" tabindex="0" role="slider" aria-valuenow="50" aria-valuemin="0"
+                              aria-valuemax="100"></div>
+                          </div>
+                          <div class="jx-arrow jx-right"></div>
+                        </div>
+                        <div class="jx-image jx-left " style="width: 54.53%;"><img
+                            src="./image_assets/teaser/Edit/SR8X/pixabay_wild_000866_nti_ip.png" alt="" data-label="Input">
+                        </div>
+                        <div class="jx-image jx-right " style="width: 45.47%;"><img
+                            src="./image_assets/teaser/Edit/SR8X/pixabay_wild_000866_edit.png" alt="" data-label="Output">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="has-text-centered">
+                  <p>
+                    <strong>Super-Resolution (8X)</strong>
+                  </p>
+                </div>
+              </div>              
+              <!-- Gaussian Deblur col 3 -->
+              <div class="column">
+                <div class="content">
+                  <div class="tab_container">
+                    <div id="juxtapose-embed1" data-startingposition="30%" data-animate="true" class="juxtapose">
+                      <div class="jx-slider">
+                        <div class="jx-handle " style="left: 54.53%;">
+                          <div class="jx-arrow jx-left"></div>
+                          <div class="jx-control">
+                            <div class="jx-controller" tabindex="0" role="slider" aria-valuenow="50" aria-valuemin="0"
+                              aria-valuemax="100"></div>
+                          </div>
+                          <div class="jx-arrow jx-right"></div>
+                        </div>
+                        <div class="jx-image jx-left " style="width: 54.53%;">
+                          <img src="./image_assets/teaser/Edit/GB/pixabay_cat_004231_nti_ip.png" alt="" data-label="Input">
+                        </div>
+                        <div class="jx-image jx-right " style="width: 45.47%;"><img
+                            src="./image_assets/teaser/Edit/GB/pixabay_cat_004231_edit.png" alt="" data-label="Output">
                         </div>
                       </div>
                     </div>
